--- a/etc/systemd/system/status-email-user@.service
+++ b/etc/systemd/system/status-email-user@.service
@@ -6,6 +6,6 @@ Description=Send status email for %i to user
 
 [Service]
 Type=oneshot
-ExecStart=/usr/local/sbin/systemd-email abc@gmail.com %i
+ExecStart=/usr/local/sbin/systemd-email jat255@gmail.com %i
 User=root
 Group=systemd-journal
