update readme, remove personal email, add PKGBUILD

--- a/etc/systemd/system/status-email-user@.service
+++ b/etc/systemd/system/status-email-user@.service
@@ -6,6 +6,6 @@ Description=Send status email for %i to user
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/systemd-email jat255@gmail.com %i
+ExecStart=/usr/bin/systemd-email <email address> %i
 User=root
 Group=systemd-journal
